# goit-pythonweb-hw-06

./: .env  main.py  my_select.py  pyproject.toml  seed.py
conf/: db.py
entity/: models.py
migrations/: env.py
